# MCP-Gridlock-5x5-

./: .gitignore  README.md  pyproject.toml
config/: game_config.json
data/: q_table_team_alpha.json  q_table_team_beta.json
docs/: PLAN.md  PRD.md  TODO.md
results/: internal_game_report.json  tournament_report.json
src/agents/: __init__.py  q_agent.py  q_persistence.py  q_update.py  state_encoding.py
src/engine/: __init__.py  board.py  config_loader.py  game_loop.py  observation.py  player.py  tournament.py  tournament_policy.py  tournament_report.py  tournament_schedule.py
src/mcp_server/: __init__.py  match_state.py  server.py  tools.py
src/scripts/: __init__.py  run_tournament.py  tournament_agents.py
tests/integration/: test_tournament_run.py  test_tournament_run_idempotent.py  test_tournament_run_qtables.py  test_tournament_run_records.py  test_tournament_run_schema.py  test_tournament_run_scoring.py  test_tournament_run_smoke.py
tests/unit/: test_board.py  test_board_barriers.py  test_board_bounds.py  test_board_query.py  test_game.py  test_game_barriers.py  test_game_capture.py  test_game_config.py  test_game_invalid_moves.py  test_game_moves.py  test_game_observation.py  test_game_state.py  test_game_timeout.py  test_mcp.py  test_mcp_match_state.py  test_mcp_match_state_submit.py  test_mcp_tools_move.py  test_mcp_tools_observation.py  test_mcp_tools_status_server.py  test_q_agent.py  test_q_agent_bellman.py  test_q_agent_bellman_isolation.py  test_q_agent_encoding.py  test_q_agent_encoding_barriers.py  test_q_agent_encoding_locality.py  (+11 more)
