[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gridlock-5x5"
version = "0.1.0"
description = "EX06: Dual AI Agent Race via MCP — a Cops and Thieves grid RL game"
requires-python = ">=3.12"
authors = [
    {name = "Avi Ayeli", email = "avi.ayeli@gmail.com"}
]

[tool.ruff]
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
